--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
-	<link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="./images/logo.png">
     <link rel="stylesheet" type="text/css" href="assets/icomoon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
